tests/js_error/source_locations/class/fields/init_call_no_constructor.js
// No constructor, so source location for fields init call is the start of the class
class C {
  field = 1 + 2n;
}

new C();